Added global class for all section heading

--- a/wordpress/wp-content/themes/architecture/scss/base/_base.scss
+++ b/wordpress/wp-content/themes/architecture/scss/base/_base.scss
@@ -89,3 +89,15 @@ a {
   }
 }
 
+.section-heading {
+  font-size: 3rem;
+  color: $sectionHeadingColor;
+  font-weight: bold;
+  padding: 1rem 0;
+}
+
+.section-small-heading {
+  color: $sectionHeadingColor;
+  font-size: 1.3rem;
+}
+
