--- a/wordpress/wp-content/themes/architecture/style.css
+++ b/wordpress/wp-content/themes/architecture/style.css
@@ -62,6 +62,82 @@ a {
           flex-direction: row;
 }
 
+.main-heading {
+  color: #fff;
+  text-align: center;
+  font-weight: bold;
+  line-height: 1.4;
+  margin-top: 2rem;
+  text-shadow: 1px 1px 10px #000000;
+}
+
+@media screen and (min-width: 320px) {
+  .main-heading {
+    font-size: 7vw;
+  }
+}
+
+@media screen and (min-width: 980px) {
+  .main-heading {
+    font-size: 4.5vw;
+  }
+}
+
+@media screen and (min-width: 1240px) {
+  .main-heading {
+    font-size: 3.5vw;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .main-heading {
+    font-size: 2.5vw;
+  }
+}
+
+.small-heading {
+  color: #fff;
+  text-align: center;
+  text-shadow: 1px 1px 6px #000000;
+  font-size: 1.5rem;
+}
+
+@media screen and (min-width: 320px) {
+  .small-heading {
+    font-size: 4vw;
+  }
+}
+
+@media screen and (min-width: 980px) {
+  .small-heading {
+    font-size: 2.5vw;
+  }
+}
+
+@media screen and (min-width: 1240px) {
+  .small-heading {
+    font-size: 2vw;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .small-heading {
+    font-size: 1.2vw;
+  }
+}
+
+.section-heading {
+  font-size: 3rem;
+  color: #000;
+  font-weight: bold;
+  padding: 1rem 0;
+}
+
+.section-small-heading {
+  color: #000;
+  font-size: 1.3rem;
+}
+
 .site-footer {
   background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.7))), url("./assets/footer.jpg");
   background-image: linear-gradient(rgba(0, 0, 0, 0.7)), url("./assets/footer.jpg");
@@ -427,70 +503,6 @@ a {
   z-index: 100;
 }
 
-.hero .hero-wrapper .hero-content h3 {
-  color: #fff;
-  text-align: center;
-  text-shadow: 1px 1px 6px #000000;
-  font-size: 1.5rem;
-}
-
-@media screen and (min-width: 320px) {
-  .hero .hero-wrapper .hero-content h3 {
-    font-size: 4vw;
-  }
-}
-
-@media screen and (min-width: 980px) {
-  .hero .hero-wrapper .hero-content h3 {
-    font-size: 2.5vw;
-  }
-}
-
-@media screen and (min-width: 1240px) {
-  .hero .hero-wrapper .hero-content h3 {
-    font-size: 2vw;
-  }
-}
-
-@media screen and (min-width: 1440px) {
-  .hero .hero-wrapper .hero-content h3 {
-    font-size: 1.2vw;
-  }
-}
-
-.hero .hero-wrapper .hero-content h1 {
-  color: #fff;
-  text-align: center;
-  font-weight: bold;
-  line-height: 1.4;
-  margin-top: 2rem;
-  text-shadow: 1px 1px 10px #000000;
-}
-
-@media screen and (min-width: 320px) {
-  .hero .hero-wrapper .hero-content h1 {
-    font-size: 7vw;
-  }
-}
-
-@media screen and (min-width: 980px) {
-  .hero .hero-wrapper .hero-content h1 {
-    font-size: 4.5vw;
-  }
-}
-
-@media screen and (min-width: 1240px) {
-  .hero .hero-wrapper .hero-content h1 {
-    font-size: 3.5vw;
-  }
-}
-
-@media screen and (min-width: 1440px) {
-  .hero .hero-wrapper .hero-content h1 {
-    font-size: 2.5vw;
-  }
-}
-
 .hero .hero-wrapper .hero-content p {
   text-align: center;
   color: #7e7d7d;
@@ -580,11 +592,6 @@ a {
   }
 }
 
-.about .right-part-about h2 {
-  font-size: 1.3rem;
-  text-transform: uppercase;
-}
-
 @media screen and (min-width: 320px) {
   .about .right-part-about h2 {
     text-align: center;
@@ -595,13 +602,6 @@ a {
   .about .right-part-about h2 {
     text-align: left;
   }
-}
-
-.about .right-part-about h1 {
-  font-size: 40px;
-  color: #000;
-  font-weight: bold;
-  padding: 1rem 0;
 }
 
 @media screen and (min-width: 320px) {
@@ -664,11 +664,6 @@ a {
   }
 }
 
-.projects .projects-title h2 {
-  font-size: 1.3rem;
-  text-transform: uppercase;
-}
-
 @media screen and (min-width: 320px) {
   .projects .projects-title h2 {
     text-align: center;
@@ -679,13 +674,6 @@ a {
   .projects .projects-title h2 {
     text-align: left;
   }
-}
-
-.projects .projects-title h1 {
-  font-size: 40px;
-  color: #000;
-  font-weight: bold;
-  padding: 1rem 0;
 }
 
 @media screen and (min-width: 320px) {
@@ -1146,12 +1134,6 @@ a {
   }
 }
 
-.blog-content h1 {
-  font-size: 40px;
-  padding: 2rem 0 1rem;
-  color: #000;
-}
-
 .blog-content .blog-content-wrapper {
   padding-top: 3rem;
 }
@@ -1267,37 +1249,6 @@ a {
 
 .single-blog-hero .single-blog-wrapper {
   height: 100%;
-}
-
-.single-blog-hero .single-blog-wrapper .single-blog-title h1 {
-  color: #fff;
-  text-align: center;
-  display: inline-block;
-  text-shadow: 1px 1px 10px #000000;
-}
-
-@media screen and (min-width: 320px) {
-  .single-blog-hero .single-blog-wrapper .single-blog-title h1 {
-    font-size: 7vw;
-  }
-}
-
-@media screen and (min-width: 980px) {
-  .single-blog-hero .single-blog-wrapper .single-blog-title h1 {
-    font-size: 4.5vw;
-  }
-}
-
-@media screen and (min-width: 1240px) {
-  .single-blog-hero .single-blog-wrapper .single-blog-title h1 {
-    font-size: 3.5vw;
-  }
-}
-
-@media screen and (min-width: 1440px) {
-  .single-blog-hero .single-blog-wrapper .single-blog-title h1 {
-    font-size: 2.5vw;
-  }
 }
 
 @media screen and (min-width: 320px) {
@@ -1418,69 +1369,6 @@ a {
 @media screen and (min-width: 1440px) {
   .about-hero {
     padding: 0;
-  }
-}
-
-.about-hero h3 {
-  text-align: center;
-  color: #fff;
-  text-align: center;
-  font-weight: normal;
-  text-transform: uppercase;
-  padding-bottom: 1.5rem;
-}
-
-@media screen and (min-width: 320px) {
-  .about-hero h3 {
-    font-size: 4vw;
-  }
-}
-
-@media screen and (min-width: 980px) {
-  .about-hero h3 {
-    font-size: 2.5vw;
-  }
-}
-
-@media screen and (min-width: 1240px) {
-  .about-hero h3 {
-    font-size: 2vw;
-  }
-}
-
-@media screen and (min-width: 1440px) {
-  .about-hero h3 {
-    font-size: 1.2vw;
-  }
-}
-
-.about-hero h1 {
-  text-align: center;
-  color: #fff;
-  font-weight: bold;
-}
-
-@media screen and (min-width: 320px) {
-  .about-hero h1 {
-    font-size: 7vw;
-  }
-}
-
-@media screen and (min-width: 980px) {
-  .about-hero h1 {
-    font-size: 4.5vw;
-  }
-}
-
-@media screen and (min-width: 1240px) {
-  .about-hero h1 {
-    font-size: 3.5vw;
-  }
-}
-
-@media screen and (min-width: 1440px) {
-  .about-hero h1 {
-    font-size: 2.5vw;
   }
 }
 
@@ -1622,17 +1510,6 @@ a {
   }
 }
 
-.about-numbers .numbers-wrapper .right-part-numbers h2 {
-  color: #000;
-  font-size: 1.3rem;
-}
-
-.about-numbers .numbers-wrapper .right-part-numbers h1 {
-  color: #000;
-  font-size: 40px;
-  padding: 1rem 0;
-}
-
 .about-numbers .numbers-wrapper .right-part-numbers p {
   line-height: 1.5;
   color: #7e7d7d;
@@ -1739,13 +1616,6 @@ a {
   }
 }
 
-.work-process h1 {
-  font-size: 3rem;
-  color: #000;
-  padding: 3rem 0;
-  text-align: center;
-}
-
 .work-process .process-item {
   padding: 3rem 5rem;
 }
@@ -1774,13 +1644,6 @@ a {
   padding-top: 1rem;
 }
 
-.work-process .process-item h1 {
-  text-align: center;
-  color: #000;
-  line-height: 1;
-  padding: 1rem 0;
-}
-
 .work-process .process-item p {
   text-align: center;
   line-height: 1.5;
@@ -1794,68 +1657,6 @@ a {
 
 .service .service-title {
   height: 100%;
-}
-
-.service .service-title h3 {
-  text-align: center;
-  color: #fff;
-  text-align: center;
-  font-weight: normal;
-  text-transform: uppercase;
-  padding-bottom: 1.5rem;
-}
-
-@media screen and (min-width: 320px) {
-  .service .service-title h3 {
-    font-size: 4vw;
-  }
-}
-
-@media screen and (min-width: 980px) {
-  .service .service-title h3 {
-    font-size: 2.5vw;
-  }
-}
-
-@media screen and (min-width: 1240px) {
-  .service .service-title h3 {
-    font-size: 2vw;
-  }
-}
-
-@media screen and (min-width: 1440px) {
-  .service .service-title h3 {
-    font-size: 1.2vw;
-  }
-}
-
-.service .service-title h1 {
-  text-align: center;
-  color: #fff;
-}
-
-@media screen and (min-width: 320px) {
-  .service .service-title h1 {
-    font-size: 7vw;
-  }
-}
-
-@media screen and (min-width: 980px) {
-  .service .service-title h1 {
-    font-size: 4.5vw;
-  }
-}
-
-@media screen and (min-width: 1240px) {
-  .service .service-title h1 {
-    font-size: 3.5vw;
-  }
-}
-
-@media screen and (min-width: 1440px) {
-  .service .service-title h1 {
-    font-size: 2.5vw;
-  }
 }
 
 @media screen and (min-width: 320px) {
@@ -1899,9 +1700,6 @@ a {
 }
 
 .service-items .service-item h1 {
-  font-size: 3rem;
-  color: #000;
-  text-align: left;
   padding: 1rem 0 2rem;
 }
 
@@ -2024,74 +1822,40 @@ a {
   padding: 20rem 0;
 }
 
-.contact-hero .contact-hero-wrapper .contact-hero-title h3 {
-  text-align: center;
-  color: #fff;
-  text-align: center;
-  font-weight: normal;
-  text-transform: uppercase;
-  padding-bottom: 1.5rem;
-}
-
-@media screen and (min-width: 320px) {
-  .contact-hero .contact-hero-wrapper .contact-hero-title h3 {
-    font-size: 4vw;
-  }
-}
-
-@media screen and (min-width: 980px) {
-  .contact-hero .contact-hero-wrapper .contact-hero-title h3 {
-    font-size: 2.5vw;
-  }
-}
-
-@media screen and (min-width: 1240px) {
-  .contact-hero .contact-hero-wrapper .contact-hero-title h3 {
-    font-size: 2vw;
-  }
-}
-
-@media screen and (min-width: 1440px) {
-  .contact-hero .contact-hero-wrapper .contact-hero-title h3 {
-    font-size: 1.2vw;
-  }
-}
-
-.contact-hero .contact-hero-wrapper .contact-hero-title h1 {
-  text-align: center;
-  color: #fff;
-  font-weight: bold;
-}
-
-@media screen and (min-width: 320px) {
-  .contact-hero .contact-hero-wrapper .contact-hero-title h1 {
-    font-size: 7vw;
-  }
-}
-
-@media screen and (min-width: 980px) {
-  .contact-hero .contact-hero-wrapper .contact-hero-title h1 {
-    font-size: 4.5vw;
-  }
-}
-
-@media screen and (min-width: 1240px) {
-  .contact-hero .contact-hero-wrapper .contact-hero-title h1 {
-    font-size: 3.5vw;
-  }
-}
-
-@media screen and (min-width: 1440px) {
-  .contact-hero .contact-hero-wrapper .contact-hero-title h1 {
-    font-size: 2.5vw;
-  }
-}
-
 .contact-form .contact-wrapper {
-  padding: 5rem 0 8rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+}
+
+@media screen and (min-width: 320px) {
+  .contact-form .contact-wrapper {
+    padding: 3rem 2rem 5rem;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .contact-form .contact-wrapper {
+    padding: 5rem 3rem 8rem;
+  }
+}
+
+@media screen and (min-width: 980px) {
+  .contact-form .contact-wrapper {
+    padding: 3rem 5rem 8rem;
+  }
+}
+
+@media screen and (min-width: 1240px) {
+  .contact-form .contact-wrapper {
+    padding: 3rem 5rem 8rem;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .contact-form .contact-wrapper {
+    padding: 5rem 0 8rem;
+  }
 }
 
 .contact-form .contact-wrapper .left-part-contact {
@@ -2107,17 +1871,6 @@ a {
 .contact-form .contact-wrapper .left-part-contact .contact-title {
   -ms-flex-preferred-size: 100%;
       flex-basis: 100%;
-}
-
-.contact-form .contact-wrapper .left-part-contact .contact-title h3 {
-  color: #000;
-  font-size: 1.3rem;
-}
-
-.contact-form .contact-wrapper .left-part-contact .contact-title h1 {
-  color: #000;
-  font-size: 40px;
-  padding: .7rem 0;
 }
 
 .contact-form .contact-wrapper .left-part-contact .contact-title p {
@@ -2144,68 +1897,5 @@ a {
 
 .project-hero .project-hero-wrapper .project-hero-title {
   padding: 15rem 0;
-}
-
-.project-hero .project-hero-wrapper .project-hero-title h3 {
-  text-align: center;
-  color: #fff;
-  text-align: center;
-  font-weight: normal;
-  text-transform: uppercase;
-  padding-bottom: 1.5rem;
-}
-
-@media screen and (min-width: 320px) {
-  .project-hero .project-hero-wrapper .project-hero-title h3 {
-    font-size: 4vw;
-  }
-}
-
-@media screen and (min-width: 980px) {
-  .project-hero .project-hero-wrapper .project-hero-title h3 {
-    font-size: 2.5vw;
-  }
-}
-
-@media screen and (min-width: 1240px) {
-  .project-hero .project-hero-wrapper .project-hero-title h3 {
-    font-size: 2vw;
-  }
-}
-
-@media screen and (min-width: 1440px) {
-  .project-hero .project-hero-wrapper .project-hero-title h3 {
-    font-size: 1.2vw;
-  }
-}
-
-.project-hero .project-hero-wrapper .project-hero-title h1 {
-  text-align: center;
-  color: #fff;
-  font-weight: bold;
-}
-
-@media screen and (min-width: 320px) {
-  .project-hero .project-hero-wrapper .project-hero-title h1 {
-    font-size: 7vw;
-  }
-}
-
-@media screen and (min-width: 980px) {
-  .project-hero .project-hero-wrapper .project-hero-title h1 {
-    font-size: 4.5vw;
-  }
-}
-
-@media screen and (min-width: 1240px) {
-  .project-hero .project-hero-wrapper .project-hero-title h1 {
-    font-size: 3.5vw;
-  }
-}
-
-@media screen and (min-width: 1440px) {
-  .project-hero .project-hero-wrapper .project-hero-title h1 {
-    font-size: 2.5vw;
-  }
 }
 /*# sourceMappingURL=style.css.map */
