--- a/wordpress/wp-content/themes/architecture/scss/pages/contact/_contact-form.scss
+++ b/wordpress/wp-content/themes/architecture/scss/pages/contact/_contact-form.scss
@@ -1,8 +1,27 @@
 .contact-form {
 
   .contact-wrapper {
-    padding: 5rem 0 8rem;
     display: flex;
+
+    @include breakpoint(mobile) {
+      padding: 3rem 2rem 5rem;
+    }
+
+    @include breakpoint(smallTablet) {
+      padding: 5rem 3rem 8rem;
+    }
+
+    @include breakpoint(tablet) {
+      padding: 3rem 5rem 8rem;
+    }
+
+    @include breakpoint(laptop) {
+      padding: 3rem 5rem 8rem;
+    }
+
+    @include breakpoint(desktop) {
+      padding: 5rem 0 8rem;
+    }
 
     .left-part-contact {
       flex-basis: 50%;
@@ -11,17 +30,6 @@
 
       .contact-title {
         flex-basis: 100%;
-
-        h3 {
-          color: $sectionHeadingColor;
-          font-size: 1.3rem;
-        }
-
-        h1 {
-          color: $sectionHeadingColor;
-          font-size: 40px;
-          padding: .7rem 0;
-        }
 
         p {
           color: $textColor;
