--- a/wordpress/wp-content/themes/architecture/scss/layouts/_header.scss
+++ b/wordpress/wp-content/themes/architecture/scss/layouts/_header.scss
@@ -46,7 +46,7 @@
         display: block;
       }
 
-      @include breakpoint(smallTablet) {
+      @include breakpoint(tablet) {
         display: none;
       }
 
@@ -64,68 +64,74 @@
     }
 
     .main-navigation {
+      transition: 1s ease-in;
 
       @include breakpoint(mobile) {
         display: none;
         position: absolute;
-        top: 0;
+        top: -20px;
         left: 0;
-        height: 100vh;
-        width: 100%;
-        background-color: black;
       }
 
-      @include breakpoint(smallTablet) {
+      @include breakpoint(tablet) {
         display: block;
+        position: relative;
+        top: 0;
       }
 
-      .menu-top-menu-container {
-        height: 100%;
-        width: 100%;
+      .menu {
         display: flex;
-        justify-content: center;
-        align-items: center;
+        list-style: none;
 
-        .nav-menu {
-          display: flex;
-          list-style: none;
+        @include breakpoint(mobile) {
+          flex-direction: column;
+          background: black;
+          width: 100vw;
+          height: 100vh;
+          align-items: center;
+          justify-content: center;
+          margin-left: -40px;
+        }
 
-          .menu-item {
-            position: relative;
+        @include breakpoint(tablet) {
+          background: transparent;
+          margin-left: 0;
+          flex-direction: row;
+          align-items: flex-start;
+          justify-content: flex-end;
+          height: 100%;
+          width: 100%;
+        }
 
-            @include breakpoint(mobile) {
-              padding: 5rem 0;
-            }
+        .menu-item {
+          position: relative;
+          padding: .8rem 1rem .8rem 0;
 
-            @include breakpoint(smallTablet) {
-              padding: .8rem 1rem .8rem 0;
-            }
+          &:hover::after {
+            width: 80%;
+            transition: .3s ease-in-out;
+          }
 
-            &:hover::after {
-              width: 80%;
-              transition: .3s ease-in-out;
-            }
+          &::after {
+            content: '';
+            width: 0;
+            height: 2px;
+            background-color: white;
+            position: absolute;
+            bottom: 5px;
+            left: 0;
+          }
 
-            &::after {
-              content: '';
-              width: 0;
-              height: 2px;
-              background-color: white;
-              position: absolute;
-              bottom: 5px;
-              left: 0;
-            }
-
-            a {
-              text-decoration: none;
-              text-transform: uppercase;
-              font-weight: normal;
-              color: $headingColor;
-            }
+          a {
+            text-decoration: none;
+            text-transform: uppercase;
+            font-weight: normal;
+            color: $headingColor;
           }
         }
       }
     }
   }
 }
+
 
