--- a/wordpress/wp-content/themes/architecture/scss/pages/_pages.scss
+++ b/wordpress/wp-content/themes/architecture/scss/pages/_pages.scss
@@ -31,3 +31,7 @@
 //projects
 @import './projects/hero-projects';
 
+//gallery
+@import './gallery/gallery-content';
+@import './gallery/gallery-hero';
+
