--- a/wordpress/wp-content/themes/architecture/style.css
+++ b/wordpress/wp-content/themes/architecture/style.css
@@ -160,22 +160,22 @@ a {
 .preloader .preloader-content {
   background-color: black;
   position: relative;
-  -webkit-animation: reveal .5s ease-in-out forwards;
-          animation: reveal .5s ease-in-out forwards;
+  -webkit-animation: reveal .2s ease-in-out forwards;
+          animation: reveal .2s ease-in-out forwards;
   -webkit-transform-origin: left;
           transform-origin: left;
 }
 
 .preloader .preloader-content::before {
   position: absolute;
-  content: '';
+  content: 'Dekor';
   top: 0;
   left: 0;
   height: 100%;
   width: 101%;
   background: white;
   z-index: 1;
-  animation: reveal .5s reverse forwards;
+  animation: reveal .2s reverse forwards;
   -webkit-transform-origin: right;
           transform-origin: right;
   -webkit-animation-delay: .5s;
@@ -211,8 +211,8 @@ a {
 
 .loader-finish {
   opacity: 0;
-  -webkit-transition: 1.5s ease-in-out;
-  transition: 1.5s ease-in-out;
+  -webkit-animation: .4s ease-in-out;
+          animation: .4s ease-in-out;
   pointer-events: none;
 }
 
@@ -2044,5 +2044,22 @@ a {
 
 .project-hero .project-hero-wrapper .project-hero-title {
   padding: 15rem 0;
+}
+
+.gallery-content {
+  padding: 5rem 0 8rem;
+}
+
+.gallery-content .image-item {
+  height: 400px;
+  cursor: pointer;
+}
+
+.gallery-hero {
+  background: url("./assets/about.jpg");
+  background-position: center center;
+  background-size: cover;
+  height: 100vh;
+  background-repeat: no-repeat;
 }
 /*# sourceMappingURL=style.css.map */
